// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkerList failure 1`] = `
<div>
  <h3>
    Workers
  </h3>
  <div
    className="alert alert-danger"
    role="alert"
  >
    some error message
  </div>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Status
        </th>
        <th>
          Start Time
        </th>
        <th>
          Last Heartbeat
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colSpan="4"
        >
          Loading...
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WorkerList loading 1`] = `
<div>
  <h3>
    Workers
  </h3>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Status
        </th>
        <th>
          Start Time
        </th>
        <th>
          Last Heartbeat
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colSpan="4"
        >
          Loading...
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WorkerList success 1`] = `
<div>
  <h3>
    Workers
  </h3>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Status
        </th>
        <th>
          Start Time
        </th>
        <th>
          Last Heartbeat
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <a
            onClick={[Function]}
            style={Object {}}
          >
            alec-graybeard.local 36470
          </a>
        </td>
        <td>
          exited
        </td>
        <td>
          2017-01-30T04:13:47.966080Z
        </td>
        <td>
          2017-01-30T04:15:10.845289Z
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
